--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "@google/genai": "latest",
+    "framer-motion": "^11.2.12",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "bcryptjs": "^3.0.2",
