--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "jsonwebtoken": "^9.0.2",
     "next": "^15.5.2",
     "stream": "^0.0.3",
-    "mime-types": "^3.0.1"
+    "mime-types": "^3.0.1",
+    "@vitejs/plugin-react": "^5.0.2",
+    "vite": "^7.1.5",
+    "src": "^1.1.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
